MDL-57066 theme_boost: Fix course section move icon alignment

--- a/theme/boost/scss/moodle/course.scss
+++ b/theme/boost/scss/moodle/course.scss
@@ -336,6 +336,10 @@
         .content > .availabilityinfo {
             margin-left: 25px;
         }
+        .left {
+            padding-top: 0;
+            text-align: right;
+        }
     }
 }
 
